--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20250417.0",
+		"@types/node": "^22.15.28",
 		"typescript": "^5.0.4",
 		"wrangler": "^4.18.0"
 	},
@@ -18,5 +19,11 @@
 		"overrides": {
 			"esbuild": "0.21.4"
 		}
+	},
+	"dependencies": {
+		"@types/turndown": "^5.0.5",
+		"cheerio": "^1.0.0",
+		"pino": "^9.7.0",
+		"turndown": "^7.2.0"
 	}
 }
