--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "workflows-starter",
+	"name": "dotcom-scraper-workflow",
 	"main": "src/index.ts",
 	"compatibility_date": "2024-10-22",
 	"observability": {
@@ -13,9 +13,9 @@
 	},
 	"workflows": [
 		{
-			"name": "workflows-starter",
-			"binding": "MY_WORKFLOW",
-			"class_name": "MyWorkflow"
+			"name": "dotcom-scraper-workflow",
+			"binding": "DAILY_SCRAPE_WORKFLOW",
+			"class_name": "DailyScrapeWorkflow"
 		}
 	]
 	/**
