--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
 		}
 	},
 	"dependencies": {
-		"@types/turndown": "^5.0.5",
 		"cheerio": "^1.0.0",
-		"pino": "^9.7.0",
-		"turndown": "^7.2.0"
+		"pino": "^9.7.0"
 	}
 }
