--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,6 +7,7 @@
 	"name": "dotcom-scraper-workflow",
 	"main": "src/index.ts",
 	"compatibility_date": "2024-10-22",
+	"compatibility_flags": ["nodejs_compat"],
 	"observability": {
 		"enabled": true,
 		"head_sampling_rate": 1
