feat: add WOD_QUEUE to daily scrape workflow and push messages to queue

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -21,6 +21,14 @@
 	],
 	"triggers": {
 		"crons": ["0 2 * * *"]
+	},
+	"queues": {
+		"producers": [
+			{
+				"binding": "WOD_QUEUE",
+				"queue": "dotcom-workouts",
+			}
+		]
 	}
 	/**
 	 * Smart Placement
