--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
 	"version": "0.0.1",
 	"scripts": {
 		"deploy": "wrangler deploy",
-		"start": "wrangler dev"
+		"start": "wrangler dev",
+		"trigger:workflow": "./scripts/trigger-workflow.ts"
 	},
 	"devDependencies": {
 		"@types/node": "^22.15.28",
+		"bun": "^1.2.15",
 		"typescript": "^5.0.4",
 		"wrangler": "^4.18.0"
 	},
