--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "workflows-starter",
 	"version": "0.0.1",
 	"scripts": {
-		"deploy": "wrangler deploy",
+		"deploy:prod": "wrangler deploy",
 		"start": "wrangler dev",
 		"trigger:workflow": "./scripts/trigger-workflow.ts"
 	},
@@ -10,7 +10,7 @@
 		"@types/node": "^22.15.28",
 		"bun": "^1.2.15",
 		"typescript": "^5.0.4",
-		"wrangler": "^4.18.0"
+		"wrangler": "^4.20.4"
 	},
 	"packageManager": "pnpm@9.1.4",
 	"engines": {
@@ -18,7 +18,7 @@
 	},
 	"pnpm": {
 		"overrides": {
-			"esbuild": "0.21.4"
+			"esbuild": "0.24.0"
 		}
 	},
 	"dependencies": {
