--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,7 +6,7 @@
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "dotcom-scraper-workflow",
 	"main": "src/index.ts",
-	"compatibility_date": "2024-10-22",
+	"compatibility_date": "2024-12-20",
 	"compatibility_flags": ["nodejs_compat"],
 	"observability": {
 		"enabled": true,
@@ -26,7 +26,7 @@
 		"producers": [
 			{
 				"binding": "WOD_QUEUE",
-				"queue": "dotcom-workouts",
+				"queue": "dotcom-workouts"
 			}
 		]
 	}
