Add AI binding configuration to wrangler.jsonc

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,6 +12,9 @@
 		"enabled": true,
 		"head_sampling_rate": 1
 	},
+	"ai": {
+		"binding": "AI"
+	},
 	"workflows": [
 		{
 			"name": "dotcom-scraper-workflow",
