--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"trigger:workflow": "./scripts/trigger-workflow.ts"
 	},
 	"devDependencies": {
+		"@types/bun": "latest",
 		"@types/node": "^22.15.28",
 		"bun": "^1.2.15",
 		"typescript": "^5.0.4",
@@ -22,7 +23,9 @@
 		}
 	},
 	"dependencies": {
+		"ai": "^4.3.16",
 		"cheerio": "^1.0.0",
-		"pino": "^9.7.0"
+		"pino": "^9.7.0",
+		"zod": "^3.25.67"
 	}
 }
